feat: タブ表示名（displayName）変更機能を追加
タブにユーザー設定のカスタム表示名を付けられる機能を実装。

変更内容:
- SavedTab/BackupTabにdisplayName?: stringフィールドを追加
- TabCardにリネームボタン（✏️）を追加
- 通常表示: 表示名+元タイトル（小さく表示）
- コンパクト表示: 表示名+編集済みアイコン（タイトル末尾）
- ホバーポップアップに元タイトル全文を追加
- 検索機能にdisplayNameを追加
- 空入力で表示名を解除可能
- 国際化対応（ja/en）
- ドキュメント更新

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -287,7 +287,10 @@
             "saved": "Saved: {datetime}",
             "deleteButton": "Delete",
             "moveToGroup": "Move to Group",
-            "removeFromGroup": "Remove from Group"
+            "removeFromGroup": "Remove from Group",
+            "rename": "Rename",
+            "renameDialogTitle": "Change Tab Display Name",
+            "renameDialogMessage": "Enter a new display name (leave empty to use original title)"
         },
         "group": {
             "openButton": "Open Group",
