feat: リンクチェックにGETフォールバック機能を追加
- HEADリクエストが失敗した場合にGETリクエストで再試行する設定を追加
- 帯域節約のため、GETリクエスト時はヘッダー受信後にAbortするよう実装
- 設定画面に「HEADで失敗した場合にGETで再試行する」オプションを追加
- 各言語（ja/en）の翻訳リソースを更新
- 動作検証用のユニットテストを追加 (`src/background/linkChecker.test.ts`)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -431,6 +431,8 @@
             "actionDead": "Dead",
             "actionWarning": "Warning",
             "actionIgnore": "Ignore",
+            "useGetFallback": "Retry with GET if HEAD fails",
+            "useGetFallbackHint": "Some sites do not support HEAD requests. Enable this to fallback to GET for better accuracy.",
             "editRule": "Edit Rule",
             "dialog": {
                 "name": "Rule Name",
