feat: カスタムグループの表示順序をドラッグアンドドロップで変更可能に
## 概要
設定画面でカスタムグループの表示順序をドラッグアンドドロップで
変更できる機能を追加しました。

## 変更内容

### DBスキーマ (v4 → v5)
- CustomGroupMetaに`sortOrder`フィールドを追加
- 既存データのマイグレーション処理を追加

### ストレージ層 (storage.ts)
- createCustomGroup: 新規グループに自動でsortOrderを割り当て
- getAllCustomGroups: sortOrder昇順でソート
- renameCustomGroup: sortOrderを保持
- updateCustomGroupOrder: 新規関数（順序変更を永続化）

### 設定画面UI (CustomGroupSettings.tsx)
- HTML5 Drag and Drop APIで挿入モードのリスト並べ替えを実装
- マウス位置に基づく挿入位置の判定（上半分/下半分）
- 挿入位置を示す線状のインジケーター表示

### タブ管理画面 (TabList.tsx)
- カスタムグループをsortOrder順で表示（propsの順序を維持）

### その他
- 多言語対応: dragHintキーを追加
- E2Eテストヘルパー: DB_VERSIONを5に更新、sortOrderインデックス追加
- group-collapse.spec.ts: キーボード操作テストのフォーカス対象を修正

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -219,6 +219,7 @@
             "createDialogTitle": "Enter new group name",
             "duplicateError": "A group with this name already exists",
             "emptyNameError": "Please enter a group name",
+            "dragHint": "Drag to reorder",
             "showInDomainGroups": "Show custom grouped tabs in domain groups",
             "showInDomainGroupsHelp": "If enabled, tabs belonging to custom groups will also be displayed in their original domain groups."
         },
