feat: カスタムグループ保存動作をマージ方式に変更し、グループメニューUIを改善
コンテキストメニューからの「カスタムグループに保存」動作を変更:
- 既存のカスタムグループ所属を維持しつつ、新規グループを追加するマージ方式に変更
- 以前は既存のグループ所属がすべて破棄され、指定グループのみに設定されていた

タブカードのグループメニューUI改善:
- メニューラベルを「グループに移動」から「カスタムグループ」に変更
- 「グループから削除」ボタンを削除（リスト内のチェックマークトグルで代替可能）
- チェックマークをUnicode文字からLucide Checkアイコンに変更
- チェックマーク領域を固定幅化し、グループ名の開始位置を統一
- 所属中グループのハイライトスタイルを追加

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -287,7 +287,7 @@
             "lastAccessed": "Last Accessed: {datetime}",
             "saved": "Saved: {datetime}",
             "deleteButton": "Delete",
-            "moveToGroup": "Move to Group",
+            "customGroups": "Custom Groups",
             "removeFromGroup": "Remove from Group",
             "rename": "Rename",
             "renameDialogTitle": "Change Tab Display Name",
