feat: 表示名変更ダイアログの使い勝手を改善
- ドメイングループのエイリアス編集ダイアログで現在のエイリアスを初期値に設定
- タブ表示名編集ダイアログで表示名未設定時に元のタイトルを初期値に設定
- ドメイングループのダイアログで空入力によるエイリアス削除を許可
- ドメイングループ用のダイアログメッセージを追加（空入力の説明）
- E2Eテスト3件追加（エイリアス初期値、空入力削除、タブ元タイトル初期値）

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -312,6 +312,7 @@
         "promptDialog": {
             "renameGroupTitle": "Rename Group",
             "renameGroupMessage": "Enter new group name",
+            "renameDomainGroupMessage": "Enter a new display name (leave empty to use original domain name)",
             "createGroupTitle": "Create New Group",
             "createGroupMessage": "Enter group name",
             "createGroupPlaceholder": "Group Name"
