feat: ドメイングループのピン留め機能を実装
- Settings型にpinnedDomainGroupsフィールドを追加
- GroupHeaderにピンボタンとピンアイコンを追加
- TabListのグループ表示順序を変更（カスタム→ピン留め→非ピン留め）
- tabs/App.tsxにピン状態の読み込みとトグルハンドラを追加
- tabs.cssにピンボタン・アイコンのスタイルを追加
- 翻訳ファイル（ja.json, en.json）にピン機能関連のキーを追加
- DraggableListコンポーネントを新規作成（将来の順序変更UI用）
- ピン機能のE2Eテスト5件を追加

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -239,6 +239,15 @@
             "emptyDomainError": "Please enter a domain name",
             "emptyAliasError": "Please enter a display name",
             "duplicateError": "Alias for this domain already exists"
+        },
+        "pinnedDomainGroups": {
+            "title": "Pinned Domain Groups",
+            "description": "Pinned domain groups are displayed right after custom groups.",
+            "empty": "No pinned domain groups",
+            "dragHint": "Drag to reorder",
+            "unpin": "Unpin",
+            "unpinConfirmTitle": "Unpin Domain Group",
+            "unpinConfirmMessage": "Unpin \"{domain}\"?"
         }
     },
     "tabManager": {
@@ -298,7 +307,9 @@
             "openAsTabGroupButton": "Open as Tab Group",
             "deleteButton": "Delete Group",
             "collapseButton": "Collapse",
-            "expandButton": "Expand"
+            "expandButton": "Expand",
+            "pinButton": "Pin",
+            "unpinButton": "Unpin"
         },
         "confirmDialog": {
             "deleteGroupTitle": "Delete Group",
