feat: カスタムグループ内のタブ削除時に確認メニューを表示する機能を追加
- カスタムグループ内のタブカードでゴミ箱ボタンをクリックした際、「グループから外す」か「タブを削除」を選択できるメニューを表示するように変更。
- React Portalを使用してメニューのレイアウト崩れを防止。
- 多言語対応（日本語・英語）を追加。
- E2Eテストを追加し、各シナリオの動作を検証。
- テスト用に e2e/helpers.ts を拡張し、カスタムグループ指定のデータ生成に対応。

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -295,12 +295,14 @@
         "tabCard": {
             "lastAccessed": "Last Accessed: {datetime}",
             "saved": "Saved: {datetime}",
-            "deleteButton": "Delete",
             "customGroups": "Custom Groups",
-            "removeFromGroup": "Remove from Group",
             "rename": "Rename",
             "renameDialogTitle": "Change Tab Display Name",
-            "renameDialogMessage": "Enter a new display name (leave empty to use original title)"
+            "renameDialogMessage": "Enter a new display name (leave empty to use original title)",
+            "deleteButton": "Delete",
+            "deleteMenuLabel": "Delete Actions",
+            "removeFromGroup": "Remove from Group",
+            "deleteTab": "Delete Tab"
         },
         "group": {
             "openButton": "Open Group",
