feat: 設定画面に「横幅を最大まで使用する」モードを追加
- Settings モデルに maximizeWidth プロパティを追加
- 設定画面（Options）に「横幅を最大まで使用する」チェックボックスを追加
- タブ管理画面で左右の余白をなくし、全幅表示にするスタイルを適用
- E2Eテストスクリプトを追加し、動作を検証

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -84,7 +84,8 @@
             "title": "Default View Mode",
             "description": "Configure the initial view mode when opening the tab manager.",
             "groupModeLabel": "Group Mode",
-            "densityLabel": "Display Density"
+            "densityLabel": "Display Density",
+            "maximizeWidthLabel": "Use maximum width"
         },
         "sort": {
             "title": "Sort Order",
