refactor: コード品質改善リファクタリング（Phase 1-3）
Phase 1: 汎用DropdownMenuコンポーネント作成 + useClickOutside統一
- DropdownMenu.tsx と DropdownMenu.test.tsx 新規作成
- useClickOutsideフックを複数ref対応に拡張
- Header.tsx、TabCard.tsx、ColorPicker.tsxの手動handleClickOutside削除

Phase 2: ColorPicker i18n対応
- ハードコード日本語文字列をt()呼び出しに置き換え
- ja.json/en.jsonにcolorPicker翻訳キー追加

Phase 3: any型の解消
- Header.tsx: Props定義とas anyキャストを型安全に
- tabSaver.ts: webextension-polyfill型定義に置き換え

その他:
- E2Eテストのセレクタ不一致を2件修正
- autoClose.test.ts, useSettings.tsの型エラー修正

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,7 +5,13 @@
         "cancel": "Cancel",
         "delete": "Delete",
         "tabs": "tabs",
-        "tabCount": "{count} tabs"
+        "tabCount": "{count} tabs",
+        "colorPicker": {
+            "selectColor": "Select group color",
+            "noColor": "No color",
+            "customColor": "Select custom color",
+            "close": "Close"
+        }
     },
     "dialog": {
         "ok": "OK",
