feat: スクリーンショット取得の信頼性向上と設定項目の追加
- 表示バッファの安定を待つ遅延付きキャプチャを実装
- ユーザー設定（有効無効、更新間隔）を追加
- chrome.alarms を使用した定期的なスクリーンショット更新を実装
- 拡張機能起動時の初期キャプチャ実行を追加
- 設定画面にスクリーンショット設定UIを統合

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -136,6 +136,13 @@
             },
             "pinnedTabsHint": "Pinned tabs are not stashed. Suspend may not work due to browser limitations."
         },
+        "screenshot": {
+            "title": "Screenshots",
+            "description": "Configure screenshot capture settings for the tab manager.",
+            "enableLabel": "Enable screenshot capture",
+            "intervalLabel": "Auto-update interval (minutes)",
+            "intervalHint": "Periodically update screenshots of active tabs (1-60 minutes)."
+        },
         "dataManagement": {
             "title": "Data Management",
             "tabData": "Tab Data",
