--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -136,6 +136,13 @@
             },
             "pinnedTabsHint": "固定タブは収納の対象外です。サスペンドはブラウザの制限により動作しない場合があります。"
         },
+        "screenshot": {
+            "title": "スクリーンショット",
+            "description": "タブ管理画面で表示されるスクリーンショットの取得設定です。",
+            "enableLabel": "スクリーンショット取得を有効にする",
+            "intervalLabel": "自動更新間隔（分）",
+            "intervalHint": "アクティブなタブのスクリーンショットを定期的に更新します（1〜60分）。"
+        },
         "dataManagement": {
             "title": "データ管理",
             "tabData": "タブデータ",
