--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -174,6 +174,12 @@
             "intervalLabel": "Auto-update interval (minutes)",
             "intervalHint": "Periodically update screenshots of active tabs (1-60 minutes)."
         },
+        "trash": {
+            "title": "Trash",
+            "retentionDays": "Retention period (days)",
+            "retentionDaysDescription": "Keep deleted tabs for the specified number of days. Set to 0 to delete immediately",
+            "emptyNow": "Empty trash now"
+        },
         "dataManagement": {
             "title": "Data Management",
             "tabData": "Tab Data",
@@ -429,6 +435,20 @@
         "groupFilter": {
             "placeholder": "Filter with regex...",
             "invalidPattern": "Invalid regex"
+        },
+        "trash": {
+            "title": "Trash",
+            "empty": "Trash is empty",
+            "restore": "Restore",
+            "restoreAll": "Restore All",
+            "restoreSelected": "Restore Selected",
+            "deletePermanently": "Delete Permanently",
+            "emptyTrash": "Empty Trash",
+            "emptyTrashConfirm": "Empty trash? This action cannot be undone.",
+            "deletedAt": "Deleted {days} days ago",
+            "deletedToday": "Deleted today",
+            "itemCount": "{count} tabs",
+            "searchPlaceholder": "Search trash..."
         }
     },
     "contextMenu": {
