feat: ゴミ箱ダイアログのUI/UX改善と削除警告の簡略化
- ゴミ箱ダイアログのサイズを画面全体に拡大（max-width: 1200px）
- 閉じるボタン（×）を削除し、オーバーレイクリックでの閉鎖を推奨
- 検索結果が空の場合のメッセージを「一致するタブがありません」に改善
- ゴミ箱が有効な場合、一括削除時の確認ダイアログをスキップするように変更
- 関連するE2Eテストの修正

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -439,6 +439,7 @@
         "trash": {
             "title": "Trash",
             "empty": "Trash is empty",
+            "noMatches": "No matching tabs found",
             "restore": "Restore",
             "restoreAll": "Restore All",
             "restoreSelected": "Restore Selected",
