feat: タブカードにソートキーバッジを表示
タブ管理画面でソートキーが設定されている場合、タブカード内に
バッジ形式で表示するようにした。

- コンパクトモード: 最終アクセスの直前（右寄せエリア内）に表示
- 通常モード: 最終アクセス行の左端に表示
- アクセントカラーのバッジスタイルで視認性を確保
- ホバー時にツールチップで「ソートキー: {key}」を表示

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -128,7 +128,8 @@
             "title": "Sort Order",
             "description": "Configure the display order in the tab manager.",
             "groupLabel": "Group Order",
-            "itemLabel": "Tab Order",
+            "itemLabel": "Item Sort:",
+            "default": "Default Sort",
             "countDesc": "Tab Count (Most)",
             "countAsc": "Tab Count (Least)",
             "domainAsc": "Domain (A-Z)",
@@ -325,6 +326,7 @@
         "sort": {
             "groupLabel": "Group Order:",
             "itemLabel": "Tab Order:",
+            "default": "Default Order",
             "countDesc": "Tab Count (Most)",
             "countAsc": "Tab Count (Least)",
             "domainAsc": "Domain (A-Z)",
@@ -348,14 +350,21 @@
         "tabCard": {
             "lastAccessed": "Last Accessed: {datetime}",
             "saved": "Saved: {datetime}",
+            "sortKey": "Sort Key: {key}",
             "customGroups": "Custom Groups",
-            "rename": "Rename",
-            "renameDialogTitle": "Change Tab Display Name",
-            "renameDialogMessage": "Enter a new display name (leave empty to use original title)",
-            "deleteButton": "Delete",
-            "deleteMenuLabel": "Delete Actions",
+            "edit": "Edit",
+            "editDialogTitle": "Edit Tab",
+            "displayNameLabel": "Display Name",
+            "displayNamePlaceholder": "Enter display name...",
+            "displayNameMessage": "Enter a new display name (leave empty to use original title)",
+            "sortKeyLabel": "Sort Key",
+            "sortKeyPlaceholder": "Enter sort key...",
+            "sortKeyHelp": "Setting a sort key will prioritize this tab when sorting, overriding the saved date.",
+            "deleteButton": "Actions",
+            "deleteMenuLabel": "Action Menu",
             "removeFromGroup": "Remove from Group",
-            "deleteTab": "Delete Tab"
+            "deleteTab": "Delete Tab",
+            "setSortKey": "Set Sort Key"
         },
         "group": {
             "openButton": "Open Group",
