feat: グループ単位のカスタムソートキー順の上書き機能を追加
- カスタムグループおよびピン留めドメイングループで、カスタムソートキー順（昇順/降順）を個別に設定可能に
- グローバル設定とは別に、グループごとに上書きできる仕組みを実装
- CustomGroupMeta と PinnedDomainGroup に customSortKeyOrder フィールドを追加
- GroupHeader のソートメニューにカスタムソートキー順の設定項目を追加
- TabList のソートロジックをグループ別設定に対応
- 翻訳キー tabManager.sort.customSortKeyOrder を追加
- ソートメニューの「既定の並び順」選択時にメニューが閉じない問題を修正
- E2Eテスト用に TabCard に data-group-name 属性を追加
- SortSettings に data-testid 属性を追加

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -141,7 +141,10 @@
             "titleAsc": "Title (A-Z)",
             "titleDesc": "Title (Z-A)",
             "accessedDesc": "Last Accessed (Newest)",
-            "accessedAsc": "Last Accessed (Oldest)"
+            "accessedAsc": "Last Accessed (Oldest)",
+            "customSortKeyOrder": "Custom Sort Key Order",
+            "customSortKeyAsc": "Ascending (A→Z)",
+            "customSortKeyDesc": "Descending (Z→A)"
         },
         "restore": {
             "title": "Tab Restore",
@@ -338,7 +341,8 @@
             "titleAsc": "Title (A-Z)",
             "titleDesc": "Title (Z-A)",
             "accessedDesc": "Last Accessed (Newest)",
-            "accessedAsc": "Last Accessed (Oldest)"
+            "accessedAsc": "Last Accessed (Oldest)",
+            "customSortKeyOrder": "Custom Sort Key Order"
         },
         "empty": {
             "title": "No saved tabs",
@@ -350,21 +354,21 @@
         "tabCard": {
             "lastAccessed": "Last Accessed: {datetime}",
             "saved": "Saved: {datetime}",
-            "sortKey": "Sort Key: {key}",
+            "customSortKey": "Custom Sort Key: {key}",
             "customGroups": "Custom Groups",
             "edit": "Edit",
             "editDialogTitle": "Edit Tab",
             "displayNameLabel": "Display Name",
             "displayNamePlaceholder": "Enter display name...",
             "displayNameMessage": "Enter a new display name (leave empty to use original title)",
-            "sortKeyLabel": "Sort Key",
-            "sortKeyPlaceholder": "Enter sort key...",
-            "sortKeyHelp": "Setting a sort key will prioritize this tab when sorting, overriding the saved date.",
+            "customSortKeyLabel": "Custom Sort Key",
+            "customSortKeyPlaceholder": "Enter custom sort key...",
+            "customSortKeyHelp": "Setting a custom sort key will prioritize this tab when sorting, overriding the configured sort order in settings.",
             "deleteButton": "Actions",
             "deleteMenuLabel": "Action Menu",
             "removeFromGroup": "Remove from Group",
             "deleteTab": "Delete Tab",
-            "setSortKey": "Set Sort Key"
+            "setCustomSortKey": "Set Custom Sort Key"
         },
         "group": {
             "openButton": "Open Group",
