feat: フォーカス復帰機能の追加
タブ管理画面から開いたタブを閉じた時、自動的にタブ管理画面に
フォーカスを戻す機能を追加しました。

## 主な変更点

- settings.ts: returnFocusToTabManager 設定を追加（デフォルト: オフ）
- RestoreSettings.tsx: タブ復元設定セクションにチェックボックスを追加
- tabs/App.tsx: handleOpenTab と handleMiddleClickTab に openerTabId 設定を追加
- en.json, ja.json: 翻訳を追加
- e2e/return_focus.spec.ts: E2Eテストを追加

## 技術的なポイント

- browser.tabs.create の openerTabId オプションを使用
- 通常クリックとホイールクリックの両方で統一的に動作

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -155,7 +155,9 @@
             "immediate": "Fast Suspend (suspend after minimal loading)",
             "intervalLabel": "Interval",
             "intervalMs": "ms",
-            "intervalHint": "Delay between opening multiple tabs (0-1000 ms). Default is 100 ms."
+            "intervalHint": "Specify the interval when restoring multiple tabs. Setting to 0 opens them simultaneously, but may put load on the browser.",
+            "returnFocusLabel": "Return to manager after closing",
+            "returnFocusHint": "When you close a tab opened from the manager, focus will automatically return to the manager screen."
         },
         "iconClick": {
             "title": "Icon Click",
