--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -154,7 +154,9 @@
             "immediate": "高速サスペンド（最低限の読み込み後にサスペンド）",
             "intervalLabel": "インターバル",
             "intervalMs": "ミリ秒",
-            "intervalHint": "複数タブを開く際の間隔（0-1000ミリ秒）。デフォルトは100ミリ秒です。"
+            "intervalHint": "複数のタブを復元する際の間隔を指定します。0に設定すると同時に開きますが、ブラウザに負荷がかかる場合があります。",
+            "returnFocusLabel": "閉じた後にタブ管理画面に戻る",
+            "returnFocusHint": "管理画面から開いたタブを閉じたとき、自動的にこの画面にフォーカスを戻します"
         },
         "iconClick": {
             "title": "アイコンクリック",
