feat: 検索入力欄のクリアボタンの重なり問題を修正
- 検索入力欄とクリアボタンを `.search-input-wrapper` でラップし、配置を適正化
- クリアボタンに `aria-label` を追加（日本語・英語）
- 検索オプションボタン（Aa, ab, .*）とクリアボタンが重ならないようにCSSを調整
- 機能を検証するためのE2Eテスト `e2e/search_clear_button.spec.ts` を追加

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -321,6 +321,7 @@
         },
         "search": {
             "placeholder": "Search by URL or title...",
+            "clearButton": "Clear search",
             "options": {
                 "caseSensitive": "Match Case",
                 "wholeWord": "Match Whole Word",
