--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -320,6 +320,7 @@
         },
         "search": {
             "placeholder": "URL・タイトルで検索...",
+            "clearButton": "検索をクリア",
             "options": {
                 "caseSensitive": "大文字/小文字を区別",
                 "wholeWord": "単語単位で検索",
